test/negative/tuple_single_elem.mut
# ERROR: tuple type with only 1 element
x: (i64) = (42)
